<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_SBPumpStatuses" Id="{124a320c-8dda-4114-baf5-16158bec1af2}">
    <Declaration><![CDATA[(* Statuses of the pumps for the switchbox *)
TYPE ST_SBPumpStatuses :
STRUCT
	// Pump statuses
	bRoughingPumpOn : BOOL; // LXLHN:PP:PMF
	bTurboPumpOn : BOOL; // LXLHN:PP:PTM
	bIonPumpOn : BOOL; // LXLHN:PP:PIP
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>