<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="F_SetTransportTubeStatuses" Id="{71653e18-e337-4c05-b7ab-5fa8158795fd}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SetTransportTubeStatuses : BOOL
VAR_INPUT
	eTransportTube : T_TransportTube;
	stExpStatus : ST_TransportTubeStatuses;
	stStatusOp : ST_TransportTubeOps;
END_VAR
VAR
	stTT : ST_TransportTube;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stTT := F_GetTransportTube(eTransportTube);

IF NOT stStatusOp.bIonPumpIgnore THEN
	stTT.stDevices.refIonPump.M_Run(stExpStatus.bIonPumpOn);
END_IF
IF NOT stStatusOp.bGateValveIgnore THEN
	stTT.stDevices.refGateValve.M_Set_OPN_SW(stExpStatus.bGateValveOpen);
END_IF]]></ST>
    </Implementation>
    <LineIds Name="F_SetTransportTubeStatuses">
      <LineId Id="53" Count="6" />
      <LineId Id="27" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>